[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-token-mcp"
version = "1.0.0"
description = "A Model Context Protocol server for managing and automatically refreshing Feishu app and user access tokens"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.14.0",
    "smithery>=0.2.4",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["feishu_token_mcp*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.smithery]
# Function that returns a patched FastMCP server
server = "feishu_token_mcp.server:create_server"